force-app/main/default/objects/Portfolio__c/Portfolio__c.object-meta.xml
<CustomObject>
    <label>Portfolio</label>
    <nameField>
        <displayFormat>P-{00000}</displayFormat>
        <label>Portfolio Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Portfolios</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>