force-app/main/default/objects/Portfolio__c/fields/I_RS_Type__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Original Creative Work –(J1)</fullName>
            </value>
            <value>
                <fullName>Live Performance of a Creative Work – (J3)</fullName>
            </value>
            <value>
                <fullName>Recorded/Rendered Creative Work – (J4)</fullName>
            </value>
            <value>
                <fullName>Curated Public Exhibition/Event – (J5)</fullName>
            </value>
            <value>
                <fullName>Research Report – (J6)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>