force-app/main/default/objects/Portfolio__c/fields/I_RS_Year__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Year__c</fullName>
    <label>Year</label>
    <type>Date</type>
</CustomField>